--- a/ZGParallelViewForTable/en.lproj/MainStoryboard.storyboard
+++ b/ZGParallelViewForTable/en.lproj/MainStoryboard.storyboard
@@ -13,7 +13,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                         <sections>
-                            <tableViewSection footerTitle="ZGParallelViewForTable looks like Parallax. yet, sepcailly design for UITableView. you can use it with two code." id="HxM-9n-icu">
+                            <tableViewSection footerTitle="ZGParallelViewForTable looks like Parallax but it specially designed for UITableView. You can use it with both components." id="HxM-9n-icu">
                                 <cells>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" textLabel="wzz-RT-3UN" style="IBUITableViewCellStyleDefault" id="jK1-Og-j9t">
                                         <rect key="frame" x="0.0" y="10" width="320" height="46"/>
